--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="directxtk12_desktop_2019" version="2023.4.28.1" targetFramework="native" />
+  <package id="Microsoft.glTF.CPP" version="1.6.3.1" targetFramework="native" />
+  <package id="rapidjson.temprelease" version="0.0.2.20" targetFramework="native" />
 </packages>
