--- a/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
+++ b/DirectX11GraphicsEngine/DirectX11GraphicsEngine.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="DirectX11GraphicEngine.h" />
+    <ClInclude Include="DirectX11IndexBuffer.h" />
     <ClInclude Include="DirectX11VertexBuffer.h" />
     <ClInclude Include="IShaderResource.h" />
     <ClInclude Include="stdafx.h" />
@@ -141,6 +142,7 @@
   <ItemGroup>
     <ClCompile Include="DirectX11Buffer.cpp" />
     <ClCompile Include="DirectX11GraphicEngine.cpp" />
+    <ClCompile Include="DirectX11IndexBuffer.cpp" />
     <ClCompile Include="IShaderResource.cpp" />
     <ClCompile Include="DirectX11GraphicsEngine.cpp" />
     <ClCompile Include="TextureDX11.cpp" />
